Add the postman and sql files

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ DOC_ENGINE_URL=http://www.api.zilepdf.com
 DB_CONNECTION=mysqli
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=temo
+DB_DATABASE=php_api_skeleton
 DB_USERNAME=root
 DB_PASSWORD=root
 
